# mini_climate_models

./: .gitignore  LICENSE  README.md  gridpoint_ml_prediction_design.md  gridpoint_ml_prompt.md
gridpoint_ml/: pyproject.toml  run_pipeline.py  run_predictions.py
gridpoint_ml/config/: example_config.toml  example_predict_config.toml  swrf_gp_config.toml  swrf_predict_config.toml  swrf_train_config.toml
gridpoint_ml/gridpoint_ml/: __init__.py  assembler.py  data.py  grid.py  io.py  metadata.py  pipeline.py  predict_pipeline.py  predict_worker.py  worker.py
gridpoint_ml/gridpoint_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gridpoint_ml/tests/: test_assembler.py  test_data.py  test_grid.py  test_pipeline.py  test_predict_pipeline.py  test_worker.py
gridpoint_ml/user_scripts/: example_train.py  train_swrf_gp.py
